<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OkCredit2</string>
    <string name="welcome_to_app">Welcome to Kasbon</string>
    <string name="select_lang">Select your language</string>
    <string name="otpAuthenticate">We will send an OTP to authenticate your account</string>
    <string name="verifyMobile">Verify Mobile</string>
    <string name="register_user_agreement">By continuing, you agree to our Terms of service and Privacy Policy</string>
    <string name="sliderText1">Get rid of your old Bahi-Khata</string>
    <string name="sliderText2">Keep all accounting in phone</string>
    <string name="sliderText3">Collect due on time and get tension free</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="verify_your_mobile_number">Verify your phone number</string>
    <string name="send_otp_authenticate">We will send an OTP to verify your account</string>
    <string name="ok">OK</string>
    <string name="invalid_mobile">Invalid mobile number</string>
    <string name="please_be_patient">Please be patient</string>
    <string name="your_otp_will_be_delivered">Your OTP will be delivered soon on %1$s</string>
    <string name="invalid_otp">Invalid otp</string>
    <string name="register_err_incorrect_otp">OK</string>
    <string name="didn_t_get_otp">Didn’t get OTP?</string>
    <string name="resend">Resend</string>
    <string name="search_or_add">Search or Add</string>
    <string name="add_customer">Add Customer</string>
    <string name="contacts">Contacts</string>
    <string name="import_phone_contact_title">Import Phone Contacts</string>
    <string name="import_phone_contact_desc">Add new customers directly from phonebook</string>
    <string name="add">Add</string>
    <string name="payment_details">Payment Details</string>
    <string name="sms_delivered">SMS delivered</string>
    <string name="deleted_on">Deleted On</string>
    <string name="share_on_whatsapp">Share on WhatsApp</string>
    <string name="photo_added">Photo Added</string>
    <string name="due">Due</string>
    <string name="advance">Advance</string>
    <string name="txn_add_credit_btn">Give\nCredit</string>
    <string name="txn_add_payment_btn">Accept\nPayment</string>
    <string name="send_payment_reminder">Send Payment reminder</string>
    <string name="balance">Balance</string>
    <string name="send">Send</string>
    <string name="call">Call</string>
    <string name="safe_secure_trans">Your transactions with &lt;b&gt;%1$s&lt;/b&gt; are completely secure and private.</string>
    <string name="online_payment">Online payment</string>
    <string name="now_you_may_accept_payment_without_password_confirmation_to_enable_payment">Disable payment password. To turn on payment password, go to your security settings</string>
    <string name="forgot_pwd">Forgot Password</string>
    <string name="add_note_optional">Add Note (Optional)</string>
    <string name="add_credit"><font size="20">Add Credit</font></string>
    <string name="add_payment"><font size="20">Add Payment</font></string>
    <string name="valid_amount">Please enter valid amount</string>
    <string name="sync_successful">Sync successful</string>
    <string name="added_on_date">Added On %1$s</string>
    <string name="delete_credit">Delete Credit</string>
    <string name="delete_payment">Delete Payment</string>
    <string name="delete_msg">Are you sure you want to delete this transaction?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="account">Acount</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="help">Help</string>
    <string name="share">Share</string>
    <string name="about">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Sign Out</string>
    <string name="logoutMsg">Are you sure you want to Sign out?</string>
    <string name="versionNo">Version: v%1$s</string>
    <string name="yourName">Your name</string>
    <string name="aboutBusiness">About Your Business</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="this_is_your_profile_business_name">This name will be visible to your customers.</string>
    <string name="address">Address</string>
    <string name="send_business_card">Share business card</string>

    <string name="home_sort_name">Name</string>
    <string name="where_do_you_want_choose_from">Where do you want to choose from?</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="turnon_location">Turn On Location</string>
    <string name="location_permission_msg">This app needs location access to use this feature.You can turn on location from location settings.</string>
    <string name="location_settings">Location Settings</string>
    <string name="cancel_tag">Cancel</string>
    <string name="share_using">Share via</string>
    <string name="contact_person_name">Contact Person Name</string>
    <string name="email">Email</string>

    <string name="customers">Customers</string>
    <string name="account_statement">Account Statement</string>
    <string name="download_backup">Download Backup</string>
    <string name="settings">Settings</string>
    <string name="security">Security</string>
    <string name="profile">Profile</string>
    <string name="collections">Collections</string>
    <string name="reminders">Reminders</string>
    <string name="language">Language</string>

    <string name="rp_symbol">₹</string>

    <string name="download">Download</string>
    <string name="net_balance">Net balance</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
