<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/gr_account">
        <item android:title="">
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_account_green"
                android:title="@string/account" />
        </item>
    </group>
    <item android:title="">
        <item
            android:id="@+id/nav_whatsapp"
            android:icon="@drawable/ic_whatsapp_nav_green"
            android:title="@string/whatsapp" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_green"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_green"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_info_green"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_lock_green"
            android:title="@string/privacy_policy" />
    </item>
    <group android:id="@+id/gr_sign_out">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_power_green"
            android:title="@string/logout" />
    </group>
</menu>
