<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="none"
    tools:context=".activity.auth.VerifyOtpActivity">

    <LinearLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/bold"
            android:text="@string/please_be_patient"
            android:textColor="@color/black_44"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvOtpDelivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/your_otp_will_be_delivered"
            android:textColor="@color/black_44"
            android:textSize="14sp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="-100dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/otp" />

        <LinearLayout
            android:id="@+id/vertical_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/otp_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:tint="@color/red"
                    app:srcCompat="@drawable/ic_warning" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/register_err_incorrect_otp"
                    android:textColor="@color/red"
                    android:textSize="14sp" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/loader"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-8dp"
                android:indeterminateOnly="true"
                android:progressDrawable="@drawable/progress_bar" />

            <LinearLayout
                android:id="@+id/otp_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#29444444"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <com.goodiebag.pinview.Pinview
                    android:id="@+id/pinViewOtp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cursorVisible="true"
                    app:forceKeyboard="false"
                    app:inputType="number"
                    app:password="false"
                    app:pinHeight="32dp"
                    app:pinLength="6"
                    app:pinWidth="32dp"
                    app:splitWidth="8dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/otp_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="8dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/didn_t_get_otp"
                    android:textColor="@color/black_44"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/resend"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</ScrollView>