<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.auth.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_margin="@dimen/_16sdp"
            android:tint="@color/black_88"
            app:srcCompat="@drawable/ic_phone" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/tvPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:hint="@string/mobile_number"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="10"
            android:textColor="@color/black_44"
            app:backgroundTint="#00000000" />

        <requestFocus />

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_margin="@dimen/_16sdp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:tint="@color/black_88"
            app:srcCompat="@drawable/ic_close" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/bold"
            android:text="@string/verify_your_mobile_number"
            android:textColor="@color/black_44"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/send_otp_authenticate"
            android:textColor="@color/black_44"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/button_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOK"
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:background="@color/white"
                android:fontFamily="@font/bold"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/ok"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:textColor="@color/black_88"
                android:textSize="12sp"
                app:backgroundTint="@color/white"
                app:cornerRadius="20dp"
                app:icon="@drawable/ic_check"
                app:iconGravity="textStart"
                app:iconPadding="12dp"
                app:iconSize="20dp"
                app:iconTint="@color/black_88"
                app:strokeColor="@color/black_88"
                app:strokeWidth="1px" />

            <ProgressBar
                android:id="@+id/loader"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_gravity="center"
                android:padding="14dp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>