<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/media_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00000000"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-8dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            app:behavior_hideable="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="50dp"
                    android:text="@string/where_do_you_want_choose_from"
                    android:textColor="@color/black_66"
                    android:textSize="14dp" />

                <ImageView
                    android:id="@+id/btn_cancel"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="12dp"
                    android:tint="@color/black_88"
                    app:srcCompat="@drawable/ic_close" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/camera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="-30dp"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center_horizontal"
                            app:cardBackgroundColor="@color/green_dark"
                            app:cardCornerRadius="24dp"
                            app:cardElevation="1dp">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="center"
                                android:tint="@color/white"
                                app:srcCompat="@drawable/ic_camera_56" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:text="@string/camera"
                            android:textColor="@color/black_66"
                            android:textSize="14dp" />
                    </LinearLayout>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/gallery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="-30dp"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center_horizontal"
                            app:cardBackgroundColor="@color/green_dark"
                            app:cardCornerRadius="24dp"
                            app:cardElevation="1dp">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="center"
                                android:tint="@color/white"
                                app:srcCompat="@drawable/ic_add_gallery_56" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:text="@string/gallery"
                            android:textColor="@color/black_66"
                            android:textSize="14dp" />
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
